[package]
name = "barista"
version = "0.1.0"
authors = ["Jade Nash <jade@lilydev.com>"]
description = "A multipurpose Discord bot."
keywords = ["discord", "uwu", "bot"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lilydev-by-jade/barista"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

dotenvy = "0.15.7"

log = "0.4.20"
pretty_env_logger = "0.5.0"
