[package]
name = "barista"
version = "0.1.0"
authors = ["Jade Nash <jade@lilydev.com>"]
description = "A multipurpose Discord bot."
keywords = ["discord", "uwu", "bot"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lilydev-by-jade/barista"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.6.1", features = ["default", "cache"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros"] }

uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.34"

anyhow = "1.0.80"
thiserror = "1.0.57"

dotenvy = "0.15.7"

log = "0.4.20"
env_logger = "0.11.2"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
